Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignNumberIntegerField.quorum
class Main
    number num
    action Main
        num = cast(number, 5)
        if num = 5.0
            output "passed"
        end
    end
end