Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignNumberUndefinedField.quorum
class Main
    number num
    action Main
        num = cast(number, undefined)
    end
end
